@@ -1,3 +1,5 @@
+- call focus_first_element after highlight and trigger element_created
+
 = 3.4.24
 - allow to set :controller in active_scaffold_record_select_autocomplete parameter or active_scaffold_input_text_options
 - fix keeping focus after update_columns when focus was changed to a field which is going to be updated
